[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Zombie.gd" type="Script" id=1]
[ext_resource path="res://sprites/prot/zombie_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/prot/zombie_basic_die.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "dead_disappear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1.86607 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=12]
radius = 17.3678
height = 44.8496

[node name="ZombieBase" type="KinematicBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 10 )
animation = "walk"
frame = 2
playing = true

[node name="DeadDisappear" type="AnimationPlayer" parent="AnimatedSprite"]
anims/dead_disappear = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 12 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
volume_db = 2.0

[node name="ImpactSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 2.0

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DeadDisappearTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite/DeadDisappear" to="." method="_on_DeadDisappear_animation_finished"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="DeadDisappearTimer" to="." method="_on_DeadDisappearTimer_timeout"]
[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]
